<resources>
    <string name="app_name">MyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text">My Food Application</string>
    <string name="text_hello">Welcome in our food</string>
    <string name="Login">Login</string>
    <string name="register">Registration</string>
    <string name="Signup">SignUp</string>
    <string name="Our_Food_App">Our Food Application</string>
    <string name="Redister">Register</string>
    <string name="name">Full Name</string>
    <string name="Full_Name">Full Name</string>
    <string name="Password">Password</string>
    <string name="email">User Email</string>
    <string name="already">Already Registered?</string>
    <string name="signin">SignIn</string>
    <string name="Signuphreader">SignUp</string>
    <string name="account">Dont Have an Account?</string>
    <string name="regist">Register</string>
    <string name="Dialy_Meal">Dialy Meal</string>
    <string name="Favorite">Favourite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="My_Cart">My Cart</string>
    <string name="username">User Name</string>
    <string name="search">Search</string>
    <string name="daily">Daily Meals</string>
    <string name="facebook_app_id">733620418248455</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">fbe13b8f069b6d3821a13a70c50ad414</string>
    <string name="hint">User Password</string>
    <string name="confirm">Confirm Password</string>
    <string-array name="languages">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
</resources>