<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FA0202"
    tools:context=".registration.view.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/ten"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="-600dp"
        android:text="@string/Our_Food_App"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/tv_textsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/Redister"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="-150dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:hint="@string/Full_Name"

        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_textsignup"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="@+id/tv_textsignup"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="-150dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"

        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_textsignup"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="@+id/tv_textsignup"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginEnd="-150dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"

        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_textsignup"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="@+id/tv_textsignup"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginEnd="-150dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"

        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_textsignup"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="@+id/tv_textsignup"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/Register2_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:background="@drawable/btn_bg_design"
        android:onClick="actiivitymain"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FAFAFA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:rippleColor="#E53935" />

    <TextView
        android:id="@+id/tv_alraedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-200dp"
        android:layout_marginBottom="144dp"
        android:text="@string/already"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="48dp"
        android:layout_height="22dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="108dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="login"
        android:text="ligin"
        android:textColor="#E53935"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/tv_alraedy"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:backgroundTint="#FA0303"
        android:text="OR"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.876" />


    <TextView
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:srcCompat="@drawable/twitter" />


</androidx.constraintlayout.widget.ConstraintLayout>